--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name:   
+name: flutter_webrtc_plus
 description: Flutter WebRTC plugin for iOS/Android/Destkop/Web, based on GoogleWebRTC.
 version: 0.11.2+7
 homepage: https://github.com/waterbustech/flutter-webrtc-plus
